all pages structurally complete, eyes no longer bleeding (as bad)

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -11,6 +11,11 @@ body {
 	padding-top:40px;
 }
 
+span {
+	color:#bbb;
+	font-size:14px;
+}
+
 /* NAVBAR STYLES */
 .top-navbar {
 	background-color: $danebook-blue;
@@ -109,6 +114,37 @@ ul {
 
 	}
 
+/* EDIT ABOUT */
+.edit-profile-box{
+	resize:none;
+}
+
+.information-textarea{
+	height:2em;
+
+}
+
+/* PHOTOS */
+
+.photos-page {
+	img {
+		&:hover{
+			opacity: 0.5;
+		}
+	}
+}
+
+/* FRIENDS */
+.friend-box{
+	display:inline-flex;
+}
+
+.friends-page-img{
+	width:100px;
+	height:100px;
+	margin: 15px 15px 15px 0;
+}
+
 /* TIMELINE */
 
 .bkg-fix {
@@ -202,7 +238,7 @@ ul {
 }
 
 .testfill {
-	height: 200px;
+	height: 140px;
 }
 
 
@@ -217,5 +253,8 @@ ul {
 
 .fill {
 	height:100%
+}
+.fillw{
+	width:100%
 }
 
